--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,4 +12,6 @@ body {
     max-width: 100dvw;
     height: 100%;
     line-height: 1.5;
+    background: #222;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
